--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 /* Estilos para o corpo da página */
 body {
   font-family: 'Roboto', sans-serif; /* Usando a fonte Roboto */
-  background-color: #d9f5f2; /* Cor de fundo suave */
+  background-color: #b6e1d0; /* Cor de fundo suave */
   display: flex;
   flex-direction: column;
   align-items: center;
